--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MERN STACK</title>
+    <title>MERN Chat Application</title>
     <link href="/src/styles.css" rel="stylesheet">
   </head>
   <body class="" >
